--- a/build.gradle
+++ b/build.gradle
@@ -20,9 +20,16 @@ apply plugin: 'forge'
 version = "1.7.10-1.0.2"
 group= "net.sparklepopprograms.resonanttoolbox"
 archivesBaseName = "ResonantToolbox"
+libsDirName = "../releases"
  
 minecraft {
     version = "1.7.10-10.13.4.1558-1.7.10"
+}
+
+task dev(type: Jar) {
+    from sourceSets.main.output
+    from sourceSets.main.allJava
+    classifier = 'dev'
 }
 
 dependencies {
