--- a/build.gradle
+++ b/build.gradle
@@ -33,8 +33,8 @@ task dev(type: Jar) {
 }
 
 dependencies {
-    compile files('lib/CoFHCore-[1.7.10]3.1.0-323-dev.jar')
-    compile files('lib/DimensionalCore-1.7.10-1.0.3-dev.jar')
+    compile files('build/libs/CoFHCore-[1.7.10]3.1.0-323-dev.jar')
+    compile files('build/libs/DimensionalCore-1.7.10-1.0.3-dev.jar')
 }
 
 processResources
